Se guardan los datos de los servidores

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 URI_MONGO=mongodb+srv://Ulises93:BTIm8hpE4O9CTSaY@proyectomiguel.hmdxazp.mongodb.net/API_MIGUEL;
+JWT_SECRET=asdwer
+JWT_REFRESH=zxcvfer
+MODO=developer
+ORIGIN1=http://localhost:5000
+ORIGIN2=null
