Se cambia la base de datos ya que el guardado id del usuario estaba en email y se guarda en Alfanumerico

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-URI_MONGO=mongodb+srv://Ulises93:BTIm8hpE4O9CTSaY@proyectomiguel.hmdxazp.mongodb.net/API_MIGUEL;
+URI_MONGO=mongodb+srv://Axel2805:OQ8voC8dvQPsHz6y@cluster0.mc5ax5j.mongodb.net/API_MIGUEL;
 JWT_SECRET=asdwer
 JWT_REFRESH=zxcvfer
 MODO=developer
