--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://ulisesrdzmtz:VicenteCanuto93@cluster0.skyblhr.mongodb.net/Cluster0?retryWrites=true&w=majorit
+MONGO_URI=mongodb+srv://ulisesrdzmtz:VicenteCanuto93@cluster0.skyblhr.mongodb.net/Cluster0?retryWrites=true&w=majority
 JWT_SECRET='apinissann'
